tests/valid-gd-scripts/match_w_multiline_arr_n_dict_85867.gd
func foo(x):
	match x:
		[1, 2]:
			pass
		{"a": 1}:
			pass
		[
			2,
			3
		]:
			pass
		{
			"a": 1
		}:
			pass
