tests/invalid-gd-scripts/match_w_dict_w_eq_2.gd
func bad(x):
	match x:
		{"x"=1, y=2}:
			pass
